--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </section>
 
 <section id="blog" class="container my-5">
-  <h2 class="mb-4 text-center">Adventure spots</h2>
+  <h2 class="mb-4 text-center">Adventure</h2>
   <div class="row g-4">
    <div class="col-md-4">
       <div class="card">
@@ -386,27 +386,31 @@
   <h2 class="text-center">Contact Us</h2>
   <form>
     <div class="mb-3">
-      <label class="form-label">Name</label>
+      <label class="form-label">Name :</label>
       <input type="text" class="form-control" required>
     </div>
     <div class="mb-3">
-      <label class="form-label">Email</label>
+      <label class="form-label">Email :</label>
       <input type="email" class="form-control" required>
     </div>
 <div class="mb-3">
-      <label class="form-label">Subject</label>
+      <label class="form-label">Subject :</label>
       <input type="text" class="form-control">
     </div>
     <div class="mb-3">
-      <label class="form-label">Message</label>
+      <label class="form-label">Message :</label>
       <textarea class="form-control" rows="4"></textarea>
     </div>
-    <button type="submit" class="btn btn-warning">Send</button>
+     <div class="mb-3">
+      <label class="form-label">Phone Number :</label>
+      <input type="number" placeholder="number" class="form-control" required>
+    </div>
+    <button type="submit" class="btn btn-dark">Submit</button>
   </form>
 </section>
 
-<footer class="bg-dark text-white text-center py-3">
-  <p>&copy; Since 2004 Global Adventure</p>
+<footer class="bg-dark text-white text-center py-2">
+  <p>&copy;2010 Wanderlust</p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
